Gave body overflow hidden to fix issues on mobile.

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 
-html {
+body {
   width: 100%;
   overflow-x: hidden;
   background-color: colors.$background-primary;
